syntax = "proto3";
package training;
option go_package = "./;pb";

// import "empty.proto";
import "google/protobuf/timestamp.proto";

service CustomerServiceRPC {
    rpc GetCustomerByCitizenId(GetCustomerByCitizenIdRequest) returns(Customer);
    rpc CreateCustomer(CreateCustomerRequest) returns (Customer);
    rpc UpdateCustomer(UpdateCustomerRequest) returns (Customer);
    rpc DeleteCustomer(DeleteCustomerRequest) returns (DeleteCustomerResponse);
}

message Customer {
    string id = 1;
    string name = 2;
    string citizen_id = 3;
    string phone = 4;
    string address = 5;
    enum Gender{
        Male = 0;
        Female = 1;
        Other = 2;
    };
    Gender gender = 6;
    google.protobuf.Timestamp dob = 7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
}

message GetCustomerByCitizenIdRequest {
    string citizen_id = 1;
}

message CreateCustomerRequest {
    string name = 1;
    string citizen_id = 2;
    string phone = 3;
    string address = 4;
    enum Gender{
        Male = 0;
        Female = 1;
        Other = 2;
    };
    Gender gender = 5;
    google.protobuf.Timestamp dob = 6;
}

message UpdateCustomerRequest {
    string id = 1;
    string name = 2;
    string citizen_id = 3;
    string phone = 4;
    string address = 5;
    enum Gender{
        Male = 0;
        Female = 1;
        Other = 2;
    };
    Gender gender = 6;
    google.protobuf.Timestamp dob = 7;
}

message DeleteCustomerRequest {
    string id = 1;
}

message DeleteCustomerResponse {
    bool is_deleted = 1;
}